Fix visibility in bright mode

--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,5 @@
 :root {
-    --vt-color-white: rgb(230, 230, 230);
+    --vt-color-white: rgb(255, 255, 255);
     --vt-color-black: rgb(0, 0, 0);
     --vt-color-grey-dark: rgb(80, 80, 80);
     --vt-color-grey: rgb(169, 169, 169);
